@@ -22,5 +22,6 @@ loader_version=0.15.3
 	argonauts_version=1.0.4
 	resourcefullib_version=2.1.11
 	opac_version=fabric-1.20.1-0.19.3
+	luckoperms_version=0.2-SNAPSHOT
 	#This uses cursemaven which uses the file id
 	ftbteams_version=4623115
