@@ -4,6 +4,7 @@ import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.tree.LiteralCommandNode;
 import me.emafire003.dev.lightwithin.LightWithin;
+import me.emafire003.dev.lightwithin.compat.permissions.PermissionsChecker;
 import me.emafire003.dev.lightwithin.config.Config;
 import net.minecraft.server.command.CommandManager;
 import net.minecraft.server.command.ServerCommandSource;
@@ -30,7 +31,9 @@ public class ReloadConfigCommand implements LightCommand{
 
     public LiteralCommandNode<ServerCommandSource> getNode() {
         return CommandManager
-                .literal("reload").executes(this::reloadConfig)
+                .literal("reload")
+                .requires(PermissionsChecker.hasPerms("lightwithin.commands.reload", 2))
+                .executes(this::reloadConfig)
                 .build();
     }
 }
