@@ -4,6 +4,7 @@ import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.tree.LiteralCommandNode;
 import me.emafire003.dev.lightwithin.LightWithin;
+import me.emafire003.dev.lightwithin.compat.permissions.PermissionsChecker;
 import me.emafire003.dev.lightwithin.component.LightComponent;
 import me.emafire003.dev.lightwithin.lights.InnerLightType;
 import me.emafire003.dev.lightwithin.util.LightCreationAndEvent;
@@ -71,6 +72,7 @@ public class ResetLightCommand implements LightCommand{
     public LiteralCommandNode<ServerCommandSource> getNode() {
         return CommandManager
                 .literal("reset")
+                .requires(PermissionsChecker.hasPerms("lightwithin.commands.reset", 2))
                 .then(
                         CommandManager.argument("player", EntityArgumentType.players())
                                 .executes(this::resetConfirm)
